--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Portfolio</title>
+    <title>Scandal Murty - Portfolio</title>
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Inter font from Google Fonts -->
@@ -34,7 +34,7 @@
     <!-- Header and Navigation -->
     <header class="bg-gray-800 text-white shadow-lg p-4">
         <div class="container mx-auto flex flex-col md:flex-row justify-between items-center">
-            <h1 class="text-3xl font-bold mb-4 md:mb-0">Your Name</h1>
+            <h1 class="text-3xl font-bold mb-4 md:mb-0">Scandal Murty</h1>
             <nav>
                 <ul class="flex flex-wrap justify-center space-x-2 md:space-x-4">
                     <li><button class="nav-link px-4 py-2 rounded-lg transition-colors duration-200 hover:bg-gray-700 active" data-target="home">Home</button></li>
@@ -52,7 +52,7 @@
         <section id="home" class="content-section active bg-white p-6 rounded-xl shadow-md mb-8">
             <h2 class="text-3xl font-semibold text-gray-800 mb-4">Welcome to My Portfolio!</h2>
             <p class="text-lg leading-relaxed text-gray-700">
-                Hello! I'm [Your Name], an aspiring Data Analyst / Business Analyst currently pursuing an Associate's degree in Computer Science with a specialization in data analysis. I am passionate about leveraging data to drive informed decisions and solve complex problems. This portfolio showcases my academic journey, professional aspirations, and personal projects.
+                Hello! I'm Scandal, an aspiring Data Analyst / Business Analyst currently pursuing an Associate's degree in Computer Science with a specialization in data analysis. I am passionate about leveraging data to drive informed decisions and solve complex problems. This portfolio showcases my academic journey, professional aspirations, and personal projects.
             </p>
             <p class="text-lg leading-relaxed text-gray-700 mt-4">
                 My goal is to combine my analytical skills with my technical foundation to extract meaningful insights from data, contributing to business growth and efficiency. I am eager to learn and apply new technologies and methodologies in the field of data science.
@@ -61,7 +61,7 @@
                 Feel free to explore my resume, projects, and hobbies. I'm excited about the possibilities that data analysis offers and look forward to connecting with professionals in the field!
             </p>
             <p class="text-lg leading-relaxed text-gray-700 mt-4 font-medium">
-                — [Your Name]
+                — Scandal Murty
             </p>
             <div class="mt-6 flex flex-wrap gap-4">
                 <a href="#" class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-bold py-3 px-6 rounded-lg shadow-md transition-colors duration-200">Connect on LinkedIn</a>
