--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                 — Scandal Murty
             </p>
             <div class="mt-6 flex flex-wrap gap-4">
-                <a href="#" class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-bold py-3 px-6 rounded-lg shadow-md transition-colors duration-200">Connect on LinkedIn</a>
-                <a href="#" class="inline-block bg-gray-700 hover:bg-gray-900 text-white font-bold py-3 px-6 rounded-lg shadow-md transition-colors duration-200">View GitHub Profile</a>
+                <a href="https://www.linkedin.com/in/scandal-murty-403543225" class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-bold py-3 px-6 rounded-lg shadow-md transition-colors duration-200">Connect on LinkedIn</a>
+                <a href="https://github.com/Scan93" class="inline-block bg-gray-700 hover:bg-gray-900 text-white font-bold py-3 px-6 rounded-lg shadow-md transition-colors duration-200">View GitHub Profile</a>
             </div>
         </section>
 
