--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
                 <p>This section displays your resume. You can view it directly here or download the PDF version.</p>
                 <!-- Embedded PDF Viewer -->
                 <div class="mt-6 mb-6">
-                    <iframe src="your_resume.pdf#toolbar=0&navpanes=0&scrollbar=0" class="pdf-embed" title="Your Resume">
-                        <p>It looks like your browser doesn't support PDFs. You can <a href="your_resume.pdf" class="text-blue-500 hover:underline font-bold">download the PDF here</a>.</p>
+                    <iframe src="ScandalMurtyResume.pdf" class="pdf-embed" title="Your Resume">
+                        <p>It looks like your browser doesn't support PDFs. You can <a href="ScandalMurtyResume.pdf" class="text-blue-500 hover:underline font-bold">download the PDF here</a>.</p>
                     </iframe>
                 </div>
 
                 <p class="mt-6 text-center">
-                    <a href="your_resume.pdf" target="_blank" class="inline-block bg-green-500 hover:bg-green-600 text-white font-bold py-3 px-6 rounded-lg shadow-md transition-colors duration-200" download>Download Full Resume (PDF)</a>
+                    <a href="ScandalMurtyResume.pdf" target="_blank" class="inline-block bg-green-500 hover:bg-green-600 text-white font-bold py-3 px-6 rounded-lg shadow-md transition-colors duration-200" download>Download Full Resume (PDF)</a>
                 </p>
 
                 <p class="mt-4 text-sm text-gray-500">
