--- a/index.html
+++ b/index.html
@@ -78,13 +78,13 @@
 
         <!-- Resume Section -->
         <section id="resume" class="content-section bg-white p-6 rounded-xl shadow-md mb-8">
-            <h2 class="text-3xl font-semibold text-gray-800 mb-4">My Resume</h2>
+            <h2 class="text-3xl font-semibold text-gray-800 mb-4">Scandal's Resume</h2>
             <div class="text-gray-700 prose max-w-none">
-                <p>This section displays your resume. You can view it directly here or download the PDF version.</p>
+                <p>You can view my resume directly here or download the PDF version.</p>
                 <!-- Embedded PDF Viewer -->
                 <div class="mt-6 mb-6">
-                    <iframe src="ScandalMurtyResume.pdf" class="pdf-embed" title="Your Resume">
-                        <p>It looks like your browser doesn't support PDFs. You can <a href="ScandalMurtyResume.pdf" class="text-blue-500 hover:underline font-bold">download the PDF here</a>.</p>
+                    <iframe src="ScandalMurtyResume.pdf" class="pdf-embed" title="Scandal's Resume">
+                        <p>It looks like your browser doesn't support PDFs. <a href="ScandalMurtyResume.pdf" class="text-blue-500 hover:underline font-bold">download the PDF here</a>.</p>
                     </iframe>
                 </div>
 
@@ -93,7 +93,7 @@
                 </p>
 
                 <p class="mt-4 text-sm text-gray-500">
-                    <strong>Note:</strong> To display your resume, make sure you upload your PDF file named `your_resume.pdf` to the same directory as your `index.html` file in your GitHub repository.
+                    <strong>Note:</strong> WIP.
                 </p>
             </div>
         </section>
