--- a/index.html
+++ b/index.html
@@ -237,12 +237,12 @@
     <!-- Footer -->
     <footer class="bg-gray-800 text-white text-center p-4 mt-8 shadow-inner">
         <div class="container mx-auto">
-            <p>&copy; 2024 Scandal Murty. All rights reserved.</p>
+            <p>&copy; Last Edited July 2024.</p>
             <p class="text-sm mt-2">
                 Connect with me:
                 <a href="https://www.linkedin.com/in/scandal-murty-403543225" target="_blank" class="text-blue-400 hover:underline mx-2">LinkedIn</a> |
                 <a href="https://github.com/Scan93" target="_blank" class="text-blue-400 hover:underline mx-2">GitHub</a> |
-                <a href="mailto:your.email@example.com" class="text-blue-400 hover:underline mx-2">Email</a>
+                <a href="mailto:scandalmurty@gmail.com" class="text-blue-400 hover:underline mx-2">Email</a>
             </p>
         </div>
     </footer>
