--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
         <!-- Projects Section -->
         <section id="projects" class="content-section bg-white p-6 rounded-xl shadow-md mb-8">
-            <h2 class="text-3xl font-semibold text-gray-800 mb-4">Data Analysis & Business Analysis Projects</h2>
+            <h2 class="text-3xl font-semibold text-gray-800 mb-4">Data Analysis & Business Analysis Projects (Page is a WIP)</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
                 <!-- Project 1 -->
                 <div class="bg-gray-50 p-5 rounded-lg shadow-sm border border-gray-200">
@@ -146,7 +146,7 @@
 
         <!-- Hobbies Section -->
         <section id="hobbies" class="content-section bg-white p-6 rounded-xl shadow-md mb-8">
-            <h2 class="text-3xl font-semibold text-gray-800 mb-4">My Hobbies & Personal Projects</h2>
+            <h2 class="text-3xl font-semibold text-gray-800 mb-4">My Hobbies & Personal Projects (Page is a WIP)</h2>
 
             <div class="mb-8">
                 <h3 class="text-2xl font-semibold text-gray-800 mb-3">3D Printing</h3>
@@ -185,7 +185,7 @@
                             Learned the basics of Blender by creating various geometric shapes and combining them into abstract art pieces.
                         </p>
                         <p class="text-gray-600 text-sm">
-                            <em>Skills: Blender (basic modeling, rendering), understanding mesh topology.</em>
+                            <em>Skills: Trimble Sketch Up - Blender (basic modeling, rendering), architechture, understanding mesh topology.</em>
                         </p>
                         <!-- Placeholder for image -->
                         <img src="https://placehold.co/400x250/dbeafe/1d4ed8?text=3D+Model+Image" alt="3D Modeled Geometric Abstraction" class="mt-4 rounded-md shadow-md w-full h-auto object-cover">
