--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <section id="home" class="content-section active bg-white p-6 rounded-xl shadow-md mb-8">
             <h2 class="text-3xl font-semibold text-gray-800 mb-4">Welcome to My Portfolio!</h2>
             <p class="text-lg leading-relaxed text-gray-700">
-                Hello! I'm Scandal Murty, an aspiring Data Analyst / Business Analyst currently pursuing an Associate's degree in Computer Science with a specialization in data analysis. I am passionate about leveraging data to drive informed decisions and solve complex problems. This portfolio showcases my academic journey, professional aspirations, and personal projects.
+                Hello! I'm Scandal Murty, an aspiring Data Analyst / Business Analyst currently pursuing an Associate's degree in Data Analytics. I am passionate about leveraging data to drive informed decisions and solve complex problems. This portfolio showcases my academic journey, professional aspirations, and personal projects.
             </p>
             <p class="text-lg leading-relaxed text-gray-700 mt-4">
                 My goal is to combine my analytical skills with my technical foundation to extract meaningful insights from data, contributing to business growth and efficiency. I am eager to learn and apply new technologies and methodologies in the field of data science.
@@ -237,7 +237,7 @@
     <!-- Footer -->
     <footer class="bg-gray-800 text-white text-center p-4 mt-8 shadow-inner">
         <div class="container mx-auto">
-            <p>&copy; Last Edited July 2024.</p>
+            <p>&copy; Updated July 2025.</p>
             <p class="text-sm mt-2">
                 Connect with me:
                 <a href="https://www.linkedin.com/in/scandal-murty-403543225" target="_blank" class="text-blue-400 hover:underline mx-2">LinkedIn</a> |
