--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scandal Murty - Portfolio</title>
-    <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <!-- Inter font from Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -35,10 +33,25 @@
             border: 1px solid #e2e8f0; /* Light border */
             border-radius: 0.75rem; /* Rounded corners */
         }
+        /* Style for Tableau Embed (Optional: make it responsive) */
+        .tableau-responsive-container {
+            position: relative;
+            width: 100%;
+            /* Adjust padding-bottom for aspect ratio. 75% for 4:3, 56.25% for 16:9 */
+            padding-bottom: 75%; /* Example: Adjust this based on your Tableau dashboard's aspect ratio if needed */
+            height: 0;
+            overflow: hidden;
+        }
+        .tableau-responsive-container iframe {
+            position: absolute;
+            top:0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
     </style>
 </head>
 <body class="min-h-screen flex flex-col">
-    <!-- Header and Navigation -->
     <header class="bg-gray-800 text-white shadow-lg p-4">
         <div class="container mx-auto flex flex-col md:flex-row justify-between items-center">
             <h1 class="text-3xl font-bold mb-4 md:mb-0">Scandal Murty</h1>
@@ -53,22 +66,20 @@
         </div>
     </header>
 
-    <!-- Main Content Area -->
     <main class="flex-grow container mx-auto p-6 md:p-8">
-        <!-- Home/Cover Letter Section -->
         <section id="home" class="content-section active bg-white p-6 rounded-xl shadow-md mb-8">
             <h2 class="text-3xl font-semibold text-gray-800 mb-4">Welcome to My Portfolio!</h2>
             <p class="text-lg leading-relaxed text-gray-700">
-                Hello! I'm Scandal Murty, an aspiring Data Analyst / Business Analyst currently pursuing an Associate's degree in Data Analytics. I am passionate about leveraging data to drive informed decisions and solve complex problems. This portfolio showcases my academic journey, professional aspirations, and personal projects.
+                Hello! I'm Scandal Murty, an aspiring Data Analyst / Business Analyst currently pursuing an Associate's degree in Data Analytics. I am passionate about leveraging data to drive informed decisions and solve complex problems. [cite_start]This portfolio showcases my academic journey, professional aspirations, and personal projects. [cite: 1]
             </p>
             <p class="text-lg leading-relaxed text-gray-700 mt-4">
-                My goal is to combine my analytical skills with my technical foundation to extract meaningful insights from data, contributing to business growth and efficiency. I am eager to learn and apply new technologies and methodologies in the field of data science.
+                My goal is to combine my analytical skills with my technical foundation to extract meaningful insights from data, contributing to business growth and efficiency. [cite_start]I am eager to learn and apply new technologies and methodologies in the field of data science. [cite: 1]
             </p>
             <p class="text-lg leading-relaxed text-gray-700 mt-4">
-                Feel free to explore my resume, projects, and hobbies. I'm excited about the possibilities that data analysis offers and look forward to connecting with professionals in the field!
+                Feel free to explore my resume, projects, and hobbies. [cite_start]I'm excited about the possibilities that data analysis offers and look forward to connecting with professionals in the field! [cite: 1]
             </p>
             <p class="text-lg leading-relaxed text-gray-700 mt-4 font-medium">
-                — Scandal Murty
+                [cite_start]— Scandal Murty [cite: 1]
             </p>
             <div class="mt-6 flex flex-wrap gap-4">
                 <a href="https://www.linkedin.com/in/scandal-murty-403543225" target="_blank" class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-bold py-3 px-6 rounded-lg shadow-md transition-colors duration-200">Connect on LinkedIn</a>
@@ -76,12 +87,10 @@
             </div>
         </section>
 
-        <!-- Resume Section -->
         <section id="resume" class="content-section bg-white p-6 rounded-xl shadow-md mb-8">
             <h2 class="text-3xl font-semibold text-gray-800 mb-4">Scandal's Resume</h2>
             <div class="text-gray-700 prose max-w-none">
                 <p>You can view my resume directly here or download the PDF version.</p>
-                <!-- Embedded PDF Viewer -->
                 <div class="mt-6 mb-6">
                     <iframe src="ScandalMurtyResume.pdf" class="pdf-embed" title="Scandal's Resume">
                         <p>It looks like your browser doesn't support PDFs. <a href="ScandalMurtyResume.pdf" class="text-blue-500 hover:underline font-bold">download the PDF here</a>.</p>
@@ -98,26 +107,62 @@
             </div>
         </section>
 
-        <!-- Projects Section -->
         <section id="projects" class="content-section bg-white p-6 rounded-xl shadow-md mb-8">
-            <h2 class="text-3xl font-semibold text-gray-800 mb-4">Data Analysis & Business Analysis Projects (Page is a WIP)</h2>
+            <h2 class="text-3xl font-semibold text-gray-800 mb-4">Data Analysis & Business Analysis Projects</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-                <!-- Project 1 -->
-                <div class="bg-gray-50 p-5 rounded-lg shadow-sm border border-gray-200">
-                    <h3 class="text-xl font-semibold text-gray-800 mb-2">Project Title 1: Sales Performance Dashboard</h3>
+
+                <div class="md:col-span-2 lg:col-span-3 bg-gray-50 p-5 rounded-lg shadow-sm border border-gray-200">
+                    <h3 class="text-xl font-semibold text-gray-800 mb-2">E-commerce Sales Performance Analysis (Amazon Sales)</h3>
                     <p class="text-lg leading-relaxed text-gray-700 mb-3">
-                        Developed an interactive dashboard to visualize sales trends and identify top-performing products using Python (Pandas, Matplotlib) and Tableau.
+                        Developed an interactive dashboard to visualize sales trends, identify top-performing products, and analyze customer behavior using SQL for data preparation and Tableau for visualization. This project provides actionable insights into sales performance for an e-commerce business.
                     </p>
                     <ul class="list-disc list-inside text-gray-600 mb-4">
-                        <li><strong>Tools:</strong> Python, Pandas, Matplotlib, Tableau</li>
-                        <li><strong>Outcome:</strong> Identified seasonal sales patterns and opportunities for inventory optimization.</li>
+                        <li><strong>Tools:</strong> SQL (SQLite), Excel, Tableau Public</li>
+                        <li><strong>Outcome:</strong> Identified monthly sales trends, top-selling products, and top customers to inform strategic business decisions.</li>
                     </ul>
-                    <a href="#" class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded-lg transition-colors duration-200 text-sm">View Project (GitHub)</a>
+                    
+                    <h4 class="text-lg font-medium text-gray-800 mt-4 mb-2">Interactive Dashboard:</h4>
+                    <div class="flex justify-center">
+                        <div class='tableauPlaceholder' id='viz1753855016132' style='position: relative; width: 100%;'>
+                            <noscript><a href='#'><img alt='Dashboard 1 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Am&#47;AmazonSalesAnalysis_17538547769410&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript>
+                            <object class='tableauViz' style='display:none;'>
+                                <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+                                <param name='embed_code_version' value='3' />
+                                <param name='site_root' value='' />
+                                <param name='name' value='AmazonSalesAnalysis_17538547769410&#47;Dashboard1' />
+                                <param name='tabs' value='no' />
+                                <param name='toolbar' value='yes' />
+                                <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Am&#47;AmazonSalesAnalysis_17538547769410&#47;Dashboard1&#47;1.png' />
+                                <param name='animate_transition' value='yes' />
+                                <param name='display_static_image' value='yes' />
+                                <param name='display_spinner' value='yes' />
+                                <param name='display_overlay' value='yes' />
+                                <param name='display_count' value='yes' />
+                                <param name='language' value='en-US' />
+                            </object>
+                        </div>
+                        <script type='text/javascript'>
+                            var divElement = document.getElementById('viz1753855016132');
+                            var vizElement = divElement.getElementsByTagName('object')[0];
+                            if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1000px';vizElement.style.height='827px';} else { vizElement.style.width='100%';vizElement.style.height='727px';}
+                            var scriptElement = document.createElement('script');
+                            scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+                            vizElement.parentNode.insertBefore(scriptElement, vizElement);
+                        </script>
+                        </div>
+
+                    <p class="mt-4 text-center text-sm text-gray-600">
+                        <em>(If the interactive dashboard doesn't load or for a full-screen view, you can access it directly on Tableau Public: 
+                        <a href="https://public.tableau.com/views/AmazonSalesAnalysis_17538547769410/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link" target="_blank" class="text-blue-500 hover:underline font-bold">Amazon Sales Analysis Dashboard</a>)</em>
+                    </p>
+                    
+                    <div class="mt-6 text-center">
+                        <a href="YOUR_GITHUB_REPO_URL_FOR_THIS_PROJECT" target="_blank" class="inline-block bg-gray-700 hover:bg-gray-900 text-white font-bold py-2 px-4 rounded-lg transition-colors duration-200 text-sm">View Project on GitHub (Code & Data)</a>
+                    </div>
                 </div>
 
-                <!-- Project 2 -->
                 <div class="bg-gray-50 p-5 rounded-lg shadow-sm border border-gray-200">
-                    <h3 class="text-xl font-semibold text-gray-800 mb-2">Project Title 2: Customer Churn Prediction</h3>
+                    <h3 class="text-xl font-semibold text-gray-800 mb-2">Project Title 2: Customer Churn Prediction (WIP)</h3>
                     <p class="text-lg leading-relaxed text-gray-700 mb-3">
                         Analyzed customer data to predict potential churn using statistical methods and basic machine learning concepts.
                     </p>
@@ -128,9 +173,8 @@
                     <a href="#" class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded-lg transition-colors duration-200 text-sm">View Project (GitHub)</a>
                 </div>
 
-                <!-- Project 3 -->
                 <div class="bg-gray-50 p-5 rounded-lg shadow-sm border border-gray-200">
-                    <h3 class="text-xl font-semibold text-gray-800 mb-2">Project Title 3: Market Basket Analysis</h3>
+                    <h3 class="text-xl font-semibold text-gray-800 mb-2">Project Title 3: Market Basket Analysis (WIP)</h3>
                     <p class="text-lg leading-relaxed text-gray-700 mb-3">
                         Explored transactional data to discover associations between purchased items, aiming to improve product placement and promotional strategies.
                     </p>
@@ -140,11 +184,10 @@
                     </ul>
                     <a href="#" class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded-lg transition-colors duration-200 text-sm">View Project (GitHub)</a>
                 </div>
-                <!-- Add more projects as you complete them -->
-            </div>
+
+                </div>
         </section>
 
-        <!-- Hobbies Section -->
         <section id="hobbies" class="content-section bg-white p-6 rounded-xl shadow-md mb-8">
             <h2 class="text-3xl font-semibold text-gray-800 mb-4">My Hobbies & Personal Projects (Page is a WIP)</h2>
 
@@ -159,7 +202,6 @@
                         <p class="text-gray-600 text-sm">
                             <em>Skills: CAD design (Tinkercad/Fusion 360 - beginner), FDM 3D printing, post-processing.</em>
                         </p>
-                        <!-- Placeholder for image -->
                         <img src="https://placehold.co/400x250/e0e7ff/4f46e5?text=3D+Print+Image" alt="3D Printed Desk Organizer" class="mt-4 rounded-md shadow-md w-full h-auto object-cover">
                     </div>
                     <div class="bg-gray-50 p-5 rounded-lg shadow-sm border border-gray-200">
@@ -170,7 +212,6 @@
                         <p class="text-gray-600 text-sm">
                             <em>Skills: Slicer software optimization, troubleshooting common print issues.</em>
                         </p>
-                        <!-- Placeholder for image -->
                         <img src="https://placehold.co/400x250/e0e7ff/4f46e5?text=Miniature+Print" alt="3D Printed Miniature" class="mt-4 rounded-md shadow-md w-full h-auto object-cover">
                     </div>
                 </div>
@@ -187,7 +228,6 @@
                         <p class="text-gray-600 text-sm">
                             <em>Skills: Trimble Sketch Up - Blender (basic modeling, rendering), architechture, understanding mesh topology.</em>
                         </p>
-                        <!-- Placeholder for image -->
                         <img src="https://placehold.co/400x250/dbeafe/1d4ed8?text=3D+Model+Image" alt="3D Modeled Geometric Abstraction" class="mt-4 rounded-md shadow-md w-full h-auto object-cover">
                     </div>
                     <div class="bg-gray-50 p-5 rounded-lg shadow-sm border border-gray-200">
@@ -198,7 +238,6 @@
                         <p class="text-gray-600 text-sm">
                             <em>Skills: Precision modeling, applying basic materials and textures.</em>
                         </p>
-                        <!-- Placeholder for image -->
                         <img src="https://placehold.co/400x250/dbeafe/1d4ed8?text=Household+Object" alt="3D Modeled Household Object" class="mt-4 rounded-md shadow-md w-full h-auto object-cover">
                     </div>
                 </div>
@@ -215,7 +254,6 @@
                         <p class="text-gray-600 text-sm">
                             <em>Skills: Breadboarding, basic circuit components, understanding schematics.</em>
                         </p>
-                        <!-- Placeholder for image -->
                         <img src="https://placehold.co/400x250/fee2e2/dc2626?text=LED+Circuit" alt="LED Blinker Circuit" class="mt-4 rounded-md shadow-md w-full h-auto object-cover">
                     </div>
                     <div class="bg-gray-50 p-5 rounded-lg shadow-sm border border-gray-200">
@@ -226,7 +264,6 @@
                         <p class="text-gray-600 text-sm">
                             <em>Skills: Arduino IDE, basic C++ for microcontrollers, digital output.</em>
                         </p>
-                        <!-- Placeholder for image -->
                         <img src="https://placehold.co/400x250/fee2e2/dc2626?text=Arduino+Blink" alt="Arduino Blink Project" class="mt-4 rounded-md shadow-md w-full h-auto object-cover">
                     </div>
                 </div>
@@ -234,7 +271,6 @@
         </section>
     </main>
 
-    <!-- Footer -->
     <footer class="bg-gray-800 text-white text-center p-4 mt-8 shadow-inner">
         <div class="container mx-auto">
             <p>&copy; Updated July 2025.</p>
