--- a/index.html
+++ b/index.html
@@ -70,16 +70,16 @@
         <section id="home" class="content-section active bg-white p-6 rounded-xl shadow-md mb-8">
             <h2 class="text-3xl font-semibold text-gray-800 mb-4">Welcome to My Portfolio!</h2>
             <p class="text-lg leading-relaxed text-gray-700">
-                Hello! I'm Scandal Murty, an aspiring Data Analyst / Business Analyst currently pursuing an Associate's degree in Data Analytics. I am passionate about leveraging data to drive informed decisions and solve complex problems. [cite_start]This portfolio showcases my academic journey, professional aspirations, and personal projects. [cite: 1]
+                Hello! I'm Scandal Murty, an aspiring Data Analyst / Business Analyst currently pursuing an Associate's degree in Data Analytics. I am passionate about leveraging data to drive informed decisions and solve complex problems. This portfolio showcases my academic journey, professional aspirations, and personal projects.
             </p>
             <p class="text-lg leading-relaxed text-gray-700 mt-4">
-                My goal is to combine my analytical skills with my technical foundation to extract meaningful insights from data, contributing to business growth and efficiency. [cite_start]I am eager to learn and apply new technologies and methodologies in the field of data science. [cite: 1]
+                My goal is to combine my analytical skills with my technical foundation to extract meaningful insights from data, contributing to business growth and efficiency. I am eager to learn and apply new technologies and methodologies in the field of data science.
             </p>
             <p class="text-lg leading-relaxed text-gray-700 mt-4">
-                Feel free to explore my resume, projects, and hobbies. [cite_start]I'm excited about the possibilities that data analysis offers and look forward to connecting with professionals in the field! [cite: 1]
+                Feel free to explore my resume, projects, and hobbies. I'm excited about the possibilities that data analysis offers and look forward to connecting with professionals in the field!
             </p>
             <p class="text-lg leading-relaxed text-gray-700 mt-4 font-medium">
-                [cite_start]— Scandal Murty [cite: 1]
+                — Scandal Murty
             </p>
             <div class="mt-6 flex flex-wrap gap-4">
                 <a href="https://www.linkedin.com/in/scandal-murty-403543225" target="_blank" class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-bold py-3 px-6 rounded-lg shadow-md transition-colors duration-200">Connect on LinkedIn</a>
@@ -118,7 +118,7 @@
                     </p>
                     <ul class="list-disc list-inside text-gray-600 mb-4">
                         <li><strong>Tools:</strong> SQL (SQLite), Excel, Tableau Public</li>
-                        <li><strong>Outcome:</strong> Identified monthly sales trends, top-selling products, and top customers to inform strategic business decisions.</li>
+                        <li><strong>Outcome:</strong> Identified monthly sales trends.</li>
                     </ul>
                     
                     <h4 class="text-lg font-medium text-gray-800 mt-4 mb-2">Interactive Dashboard:</h4>
