--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
                 </div>
 
                 <div class="bg-gray-50 p-5 rounded-lg shadow-sm border border-gray-200">
-                    <h3 class="text-xl font-semibold text-gray-800 mb-2">Project Title 2: Customer Churn Prediction (WIP)</h3>
+                    <h3 class="text-xl font-semibold text-gray-800 mb-2">Project 2:(WIP)</h3>
                     <p class="text-lg leading-relaxed text-gray-700 mb-3">
-                        Analyzed customer data to predict potential churn using statistical methods and basic machine learning concepts.
+                        Analyzed customer data.....WIP
                     </p>
                     <ul class="list-disc list-inside text-gray-600 mb-4">
                         <li><strong>Tools:</strong> Python, Scikit-learn (basic), SQL</li>
@@ -174,9 +174,9 @@
                 </div>
 
                 <div class="bg-gray-50 p-5 rounded-lg shadow-sm border border-gray-200">
-                    <h3 class="text-xl font-semibold text-gray-800 mb-2">Project Title 3: Market Basket Analysis (WIP)</h3>
+                    <h3 class="text-xl font-semibold text-gray-800 mb-2">Project 3:(WIP)</h3>
                     <p class="text-lg leading-relaxed text-gray-700 mb-3">
-                        Explored transactional data to discover associations between purchased items, aiming to improve product placement and promotional strategies.
+                        Explored transactional data to discover associations between purchased items, aiming to improve product placement and promotional strategies....WIP
                     </p>
                     <ul class="list-disc list-inside text-gray-600 mb-4">
                         <li><strong>Tools:</strong> Python, Apriori Algorithm (conceptual)</li>
@@ -195,19 +195,19 @@
                 <h3 class="text-2xl font-semibold text-gray-800 mb-3">3D Printing</h3>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                     <div class="bg-gray-50 p-5 rounded-lg shadow-sm border border-gray-200">
-                        <h4 class="text-xl font-medium text-gray-800 mb-2">Project: Custom Desk Organizer</h4>
+                        <h4 class="text-xl font-medium text-gray-800 mb-2">Project: WIP</h4>
                         <p class="text-lg leading-relaxed text-gray-700 mb-3">
-                            Designed and 3D printed a modular desk organizer tailored to my specific needs, including compartments for pens, tools, and small electronics.
+                            Designed and 3D printed....WIP
                         </p>
                         <p class="text-gray-600 text-sm">
-                            <em>Skills: CAD design (Tinkercad/Fusion 360 - beginner), FDM 3D printing, post-processing.</em>
+                            <em>Skills: Trimble Sketch Up - (advanced), Blender - (beginner), FDM 3D printing, post-processing.</em>
                         </p>
                         <img src="https://placehold.co/400x250/e0e7ff/4f46e5?text=3D+Print+Image" alt="3D Printed Desk Organizer" class="mt-4 rounded-md shadow-md w-full h-auto object-cover">
                     </div>
                     <div class="bg-gray-50 p-5 rounded-lg shadow-sm border border-gray-200">
-                        <h4 class="text-xl font-medium text-gray-800 mb-2">Project: Miniature Figurines</h4>
+                        <h4 class="text-xl font-medium text-gray-800 mb-2">Project: WIP</h4>
                         <p class="text-lg leading-relaxed text-gray-700 mb-3">
-                            Experimented with printing miniature figurines, focusing on optimizing print settings for fine details and smooth finishes.
+                            Experimented with....WIP
                         </p>
                         <p class="text-gray-600 text-sm">
                             <em>Skills: Slicer software optimization, troubleshooting common print issues.</em>
@@ -233,7 +233,7 @@
                     <div class="bg-gray-50 p-5 rounded-lg shadow-sm border border-gray-200">
                         <h4 class="text-xl font-medium text-gray-800 mb-2">Project: Recreating Household Objects</h4>
                         <p class="text-lg leading-relaxed text-gray-700 mb-3">
-                            Practiced precise modeling by attempting to recreate common household objects (e.g., a coffee mug, a simple chair) in Blender.
+                            Practiced precise modeling by attempting to recreate common household objects (e.g., organizational objects) in Sketch Up.
                         </p>
                         <p class="text-gray-600 text-sm">
                             <em>Skills: Precision modeling, applying basic materials and textures.</em>
@@ -247,12 +247,12 @@
                 <h3 class="text-2xl font-semibold text-gray-800 mb-3">Electrical Engineering (Beginner)</h3>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                     <div class="bg-gray-50 p-5 rounded-lg shadow-sm border border-gray-200">
-                        <h4 class="text-xl font-medium text-gray-800 mb-2">Project: Simple LED Blinker Circuit</h4>
+                        <h4 class="text-xl font-medium text-gray-800 mb-2">Project: WIP</h4>
                         <p class="text-lg leading-relaxed text-gray-700 mb-3">
-                            Assembled a basic LED blinking circuit using a 555 timer IC, resistors, and capacitors on a breadboard.
+                            WIP
                         </p>
                         <p class="text-gray-600 text-sm">
-                            <em>Skills: Breadboarding, basic circuit components, understanding schematics.</em>
+                            <em>Skills: understanding schematics, WIP</em>
                         </p>
                         <img src="https://placehold.co/400x250/fee2e2/dc2626?text=LED+Circuit" alt="LED Blinker Circuit" class="mt-4 rounded-md shadow-md w-full h-auto object-cover">
                     </div>
