--- a/hobbies.html
+++ b/hobbies.html
@@ -1,1 +1,82 @@
+        <section id="hobbies" class="content-section bg-white p-6 rounded-xl shadow-md mb-8">
+            <h2 class="text-3xl font-semibold text-gray-800 mb-4">My Hobbies & Personal Projects (Page is a WIP)</h2>
 
+            <div class="mb-8">
+                <h3 class="text-2xl font-semibold text-gray-800 mb-3">3D Printing</h3>
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                    <div class="bg-gray-50 p-5 rounded-lg shadow-sm border border-gray-200">
+                        <h4 class="text-xl font-medium text-gray-800 mb-2">Project: WIP</h4>
+                        <p class="text-lg leading-relaxed text-gray-700 mb-3">
+                            Designed and 3D printed....WIP
+                        </p>
+                        <p class="text-gray-600 text-sm">
+                            <em>Skills: Trimble Sketch Up - (advanced), Blender - (beginner), FDM 3D printing, post-processing.</em>
+                        </p>
+                        <img src="https://placehold.co/400x250/e0e7ff/4f46e5?text=3D+Print+Image" alt="3D Printed Desk Organizer" class="mt-4 rounded-md shadow-md w-full h-auto object-cover">
+                    </div>
+                    <div class="bg-gray-50 p-5 rounded-lg shadow-sm border border-gray-200">
+                        <h4 class="text-xl font-medium text-gray-800 mb-2">Project: WIP</h4>
+                        <p class="text-lg leading-relaxed text-gray-700 mb-3">
+                            Experimented with....WIP
+                        </p>
+                        <p class="text-gray-600 text-sm">
+                            <em>Skills: Slicer software optimization, troubleshooting common print issues.</em>
+                        </p>
+                        <img src="https://placehold.co/400x250/e0e7ff/4f46e5?text=Miniature+Print" alt="3D Printed Miniature" class="mt-4 rounded-md shadow-md w-full h-auto object-cover">
+                    </div>
+                </div>
+            </div>
+
+            <div class="mb-8">
+                <h3 class="text-2xl font-semibold text-gray-800 mb-3">3D Modeling</h3>
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                    <div class="bg-gray-50 p-5 rounded-lg shadow-sm border border-gray-200">
+                        <h4 class="text-xl font-medium text-gray-800 mb-2">Project: Simple Geometric Abstractions</h4>
+                        <p class="text-lg leading-relaxed text-gray-700 mb-3">
+                            Learned the basics of Blender by creating various geometric shapes and combining them into abstract art pieces.
+                        </p>
+                        <p class="text-gray-600 text-sm">
+                            <em>Skills: Trimble Sketch Up - Blender (basic modeling, rendering), architechture, understanding mesh topology.</em>
+                        </p>
+                        <img src="https://placehold.co/400x250/dbeafe/1d4ed8?text=3D+Model+Image" alt="3D Modeled Geometric Abstraction" class="mt-4 rounded-md shadow-md w-full h-auto object-cover">
+                    </div>
+                    <div class="bg-gray-50 p-5 rounded-lg shadow-sm border border-gray-200">
+                        <h4 class="text-xl font-medium text-gray-800 mb-2">Project: Recreating Household Objects</h4>
+                        <p class="text-lg leading-relaxed text-gray-700 mb-3">
+                            Practiced precise modeling by attempting to recreate common household objects (e.g., organizational objects) in Sketch Up.
+                        </p>
+                        <p class="text-gray-600 text-sm">
+                            <em>Skills: Precision modeling, applying basic materials and textures.</em>
+                        </p>
+                        <img src="https://placehold.co/400x250/dbeafe/1d4ed8?text=Household+Object" alt="3D Modeled Household Object" class="mt-4 rounded-md shadow-md w-full h-auto object-cover">
+                    </div>
+                </div>
+            </div>
+
+            <div>
+                <h3 class="text-2xl font-semibold text-gray-800 mb-3">Electrical Engineering (Beginner)</h3>
+                <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                    <div class="bg-gray-50 p-5 rounded-lg shadow-sm border border-gray-200">
+                        <h4 class="text-xl font-medium text-gray-800 mb-2">Project: WIP</h4>
+                        <p class="text-lg leading-relaxed text-gray-700 mb-3">
+                            WIP
+                        </p>
+                        <p class="text-gray-600 text-sm">
+                            <em>Skills: understanding schematics, WIP</em>
+                        </p>
+                        <img src="https://placehold.co/400x250/fee2e2/dc2626?text=LED+Circuit" alt="LED Blinker Circuit" class="mt-4 rounded-md shadow-md w-full h-auto object-cover">
+                    </div>
+                    <div class="bg-gray-50 p-5 rounded-lg shadow-sm border border-gray-200">
+                        <h4 class="text-xl font-medium text-gray-800 mb-2">Project: Arduino "Hello World" (Blink)</h4>
+                        <p class="text-lg leading-relaxed text-gray-700 mb-3">
+                            Wrote and uploaded the classic "Blink" sketch to an Arduino Uno, controlling an onboard LED.
+                        </p>
+                        <p class="text-gray-600 text-sm">
+                            <em>Skills: Arduino IDE, basic C++ for microcontrollers, digital output.</em>
+                        </p>
+                        <img src="https://placehold.co/400x250/fee2e2/dc2626?text=Arduino+Blink" alt="Arduino Blink Project" class="mt-4 rounded-md shadow-md w-full h-auto object-cover">
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
