--- a/hobbies.html
+++ b/hobbies.html
@@ -53,6 +53,18 @@
                 </div>
             </div>
 
+                <section id="hobbies" class="content-section bg-white p-6 rounded-xl shadow-md mb-8">
+    <h2 class="text-3xl font-semibold text-gray-800 mb-4">My Hobbies & Personal Projects</h2>
+    <div class="flex flex-col items-center justify-center p-8 text-center">
+        <p class="text-xl leading-relaxed text-gray-700 mb-6">
+            Explore my personal projects and hobbies, including 3D printing and electrical engineering, on a dedicated page.
+        </p>
+        <a href="hobbies.html" class="inline-block bg-blue-500 hover:bg-blue-600 text-white font-bold py-3 px-6 rounded-lg shadow-md transition-colors duration-200">
+            View My Hobbies
+        </a>
+    </div>
+</section>
+
             <div>
                 <h3 class="text-2xl font-semibold text-gray-800 mb-3">Electrical Engineering (Beginner)</h3>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
